--- a/package.json
+++ b/package.json
@@ -1,28 +1,38 @@
 {
-  "name": "svelte-parcel-talwind-starter",
+  "name": "svelte-paracel-tailwindcss-template",
   "version": "1.0.0",
-  "description": "Svelte with Tailwind and Parcel",
+  "description": "Boostrap any Svelte project",
   "main": "./src/main.js",
-  "author": "iljoo",
+  "author": "parables",
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "parcel src/index.html --port 3000",
-    "build": "rm -rf dist && parcel build src/index.html --no-source-maps"
+    "watch:tailwind": "postcss public/tailwind.css -o public/index.css -w",
+    "start": "   parcel -d public src/index.html --port 3000 && npm run add:assets",
+    "build": "rm -rf dist  &&  parcel build  -d public src/index.html  &&  npm run add:assets",
+    "add:assets": "cp -rf src/assets public/assets"
   },
   "browserslist": [
     "last 1 chrome versions"
   ],
+  "dependencies": {
+    "immutable": "^4.0.0-rc.12",
+    "parcel-bundler": "^1.12.4",
+    "tailwindcss-truncate-multiline": "^1.0.3"
+  },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0",
+    "apollo-boost": "^0.4.7",
     "autoprefixer": "^9.7.3",
     "eslint-plugin-svelte3": "^2.7.3",
-    "parcel-bundler": "^1.12.4",
+    "graphql": "^14.6.0",
     "parcel-plugin-svelte": "^4.0.5",
     "prettier": "^1.19.1",
     "prettier-plugin-svelte": "^0.7.0",
+    "pubnub": "^4.27.3",
     "svelte": "^3.16.7",
-    "tailwindcss": "^1.1.4",
-    "tailwindcss-font-inter": "^1.0.7"
+    "svelte-apollo": "^0.3.0",
+    "svelte-spa-router": "^2.0.0",
+    "tailwindcss": "^1.1.4"
   }
 }
