Added typescript suport

--- a/package.json
+++ b/package.json
@@ -1,38 +1,53 @@
 {
-  "name": "svelte-paracel-tailwindcss-template",
+  "name": "svelta",
   "version": "1.0.0",
-  "description": "Boostrap any Svelte project",
-  "main": "./src/main.js",
-  "author": "parables",
-  "license": "MIT",
-  "private": false,
-  "scripts": {
-    "watch:tailwind": "postcss public/tailwind.css -o public/index.css -w",
-    "start": "   parcel -d public src/index.html --port 3000 && npm run add:assets",
-    "build": "rm -rf dist  &&  parcel build  -d public src/index.html  &&  npm run add:assets",
-    "add:assets": "cp -rf src/assets public/assets"
-  },
-  "browserslist": [
-    "last 1 chrome versions"
-  ],
+  "description": "Svelte Tailwind Form  Components",
+  "main": "src/index.ts",
   "dependencies": {
-    "immutable": "^4.0.0-rc.12",
     "parcel-bundler": "^1.12.4",
-    "tailwindcss-truncate-multiline": "^1.0.3"
+    "svelte": "^3.23.0",
+    "tailwindcss": "^1.1.4",
+    "tailwindcss-classnames": "^1.3.8",
+    "typescript": "^3.9.5"
   },
   "devDependencies": {
+    "parcel-plugin-svelte": "^4.0.6",
+    "svelte-preprocess": "^3.9.6",
+    "tailwindcss-truncate-multiline": "^1.0.3",
     "@fullhuman/postcss-purgecss": "^1.3.0",
-    "apollo-boost": "^0.4.7",
     "autoprefixer": "^9.7.3",
     "eslint-plugin-svelte3": "^2.7.3",
-    "graphql": "^14.6.0",
-    "parcel-plugin-svelte": "^4.0.5",
     "prettier": "^1.19.1",
-    "prettier-plugin-svelte": "^0.7.0",
-    "pubnub": "^4.27.3",
-    "svelte": "^3.16.7",
-    "svelte-apollo": "^0.3.0",
-    "svelte-spa-router": "^2.0.0",
-    "tailwindcss": "^1.1.4"
-  }
+    "prettier-plugin-svelte": "^0.7.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "rm -rf dist && parcel serve src/index.html",
+    "build": "rm -rf dist && parcel build src/index.html",
+    "generate-custom-types": "npx tailwindcss-classnames"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Parables/svelta.git"
+  },
+  "keywords": [
+    "svelta",
+    "smelte",
+    "tailwind",
+    "compnents",
+    "svelte",
+    "ui",
+    "kits",
+    "form",
+    "elements"
+  ],
+  "author": "Parables Boltnoel <parables95@gmail.com>",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Parables/svelta/issues"
+  },
+  "homepage": "https://github.com/Parables/svelta#readme",
+  "browserslist": [
+    "last 1 chrome versions"
+  ]
 }
